--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ lazy_static = "1.4.0"
 strum = "0.27"
 strum_macros = "0.27"
 log = "0.4.29"
+tokio = { version = "1.40", features = ["full"] }
+futures = "0.3"
+num_cpus = "1.16"
